# Aegis-Conduit

./: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  README_JUDGES.md  README_UPDATED.md  analyze_history.py  app.py  docker-compose.yml  docker-run.md  export_slide_assets.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
aegis_conduit/: __init__.py  agent.py  anomaly.py  api.py  broadcast.py  cli.py  communications.py  data_veracity.py  explainability.py  forecasting.py  foundry_iq.py  geospatial.py  identity.py  knowledge_graph.py  mesh_sync.py  mission_planner.py  policy.py  pull_model.py  resource_optimizer.py  routing.py  scenario.py  security.py  simulator.py  state_store.py  test_brain.py  trust.py  utils.py
aegis_conduit/adapters/: scheduler.py  weather_adapter.py  weather_feed.py
aegis_conduit/agents/: __init__.py  commander.py  drone_agent.py  intel_agent.py  mission_director.py  routing_agent.py  supply_agent.py
aegis_conduit/data/: sample_packets.json
aegis_conduit/mesh_transport/: __init__.py  bluetooth.py  crdt_state.py  gossip.py  lora.py  wifi_direct.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: PacketCard.jsx
frontend/src/data/: sample_packets.json
scripts/: demo_runner.py  full_demo.py  smoke_foundry.py
tests/: test_aegis_conduit.py  test_api.py  test_mesh_sync.py  test_routing_hazards.py  test_weather_adapter_scheduler.py  test_weather_feed.py
