[project]
name = "aegis-conduit"
version = "0.1.0"
description = "Decentralized crisis logistics and resiliency agent for edge deployments."
authors = [
  { name = "Aegis Conduit" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "networkx>=3.1",
  "python-dateutil>=2.8",
  "jsonschema>=4.21",
]

[tool.setuptools.packages.find]
include = ["aegis_conduit*"]

[project.scripts]
aegis-conduit = "aegis_conduit.cli:main"
